--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.4
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,9 +8,10 @@ dataSources:
     source:
       address: "0x57f1887a8BF19b14fC0dF6Fd9B2acc9Af147eA85"
       abi: ENS
+      startBlock: 15896076
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
         - Approval
@@ -26,16 +27,6 @@ dataSources:
         - name: ENS
           file: ./abis/ENS.json
       eventHandlers:
-        - event: Approval(indexed address,indexed address,indexed uint256)
-          handler: handleApproval
-        - event: ApprovalForAll(indexed address,indexed address,bool)
-          handler: handleApprovalForAll
-        - event: ControllerAdded(indexed address)
-          handler: handleControllerAdded
-        - event: ControllerRemoved(indexed address)
-          handler: handleControllerRemoved
-        - event: NameMigrated(indexed uint256,indexed address,uint256)
-          handler: handleNameMigrated
         - event: NameRegistered(indexed uint256,indexed address,uint256)
           handler: handleNameRegistered
         - event: NameRenewed(indexed uint256,uint256)
