--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -36,3 +36,30 @@ dataSources:
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
       file: ./src/ens.ts
+  - kind: ethereum
+    name: EthRegistrarController
+    network: mainnet
+    source:
+      address: "0x283Af0B28c62C092C9727F1Ee09c02CA627EB7F5"
+      abi: EthRegistrarController
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - NameRegistered
+        - NameRenewed
+        - NewPriceOracle
+        - OwnershipTransferred
+      abis:
+        - name: EthRegistrarController
+          file: ./abis/EthRegistrarController.json
+      eventHandlers:
+        - event: NameRegistered(string,indexed bytes32,indexed
+            address,uint256,uint256)
+          handler: handleNameRegistered
+        - event: NameRenewed(string,indexed bytes32,uint256,uint256)
+          handler: handleNameRenewed
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+      file: ./src/eth-registrar-controller.ts
