--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/amtaf/ens_10k",
-    "create-local": "graph create --node http://localhost:8020/amtaf/ens_10k",
-    "remove-local": "graph remove --node http://localhost:8020/amtaf/ens_10k",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ amtaf/ens_10k",
+    "create-local": "graph create --node http://localhost:8020/ amtaf/ens_10k",
+    "remove-local": "graph remove --node http://localhost:8020/ amtaf/ens_10k",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 amtaf/ens_10k",
     "test": "graph test"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.33.0",
-    "@graphprotocol/graph-ts": "0.27.0"
+    "@graphprotocol/graph-cli": "0.34.0",
+    "@graphprotocol/graph-ts": "0.28.0"
   },
   "devDependencies": {
     "matchstick-as": "^0.5.0"
